Update LoginScreen styles for improved layout and responsiveness. Adjust padding in WrapperContainer2 for better alignment and add media query styles to ensure proper padding in the login form on smaller screens.

--- a/src/Pages/Screens/LoginScreen/styles.css
+++ b/src/Pages/Screens/LoginScreen/styles.css
@@ -184,6 +184,10 @@
 }
 
 @media (max-width: 768px) {
+    .login-form {
+        padding: 0px;
+    }
+
     .login-main-container {
         padding: 20px;
     }
